--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
   integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
   crossorigin="anonymous"
 />
-    <title>React App</title>
+    <title>Discount Calc</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
